Option to only take some data

--- a/SocialDataProject/index.html
+++ b/SocialDataProject/index.html
@@ -101,37 +101,7 @@
     <!-- Answers -->
       <section id="one" class="wrapper style2">
         <div class="inner">
-            <div id="part1" class="content">
-
-                <!-- PART 1  -->
-                <div class="align-center">
-                  <h2>Part 1</h2>
-                  <p>Telling Data Stories</p>
-                </div>
-
-                <div id="part1_content">
-                  <blockquote>What is the Oxford English Dictionary's definition of a narrative?</blockquote>
-                    <p>An account of a series of events, facts, etc., given in order and with the establishing of connections between them.</p>
-
-                  <blockquote>What is your favorite visualization among the examples in section 3? Explain why in a few words.</blockquote>
-                    <p>Our favorite visualization is figure 2 as it couples a simple visualization with a high degree of interactivity, meaning less visual clutter and more engagement with the reader, whereas something like Figure 1 has a high degree of visual clutter.</p>
-
-                  <blockquote>What's the point of Figure 7?</blockquote>
-                    <p>Figure 7 gives an overview of a number of visual narratives and narrative structures used in examples of different genres. Additionally it highlights several sections. Ordering strategies corresponding to distinct genres of visual narration, the consistency of interactive designs used by visualizations, the under-utilization of strategies to engage the user and under-utilization of common storytelling techniques across narrative visualizations. It is meant to give an overview of which tools are most used in which genres.</p>
-
-                  <blockquote>Use Figure 7 to find the most common design choice within each category for the Visual narrative and Narrative structure (the categories within visual narrative are 'visual structuring', 'highlighting', etc).</blockquote>
-                    <p>From figure 7 we could read that the most used design choices for the categories visual structuring, highlighting, transition guidance, ordering, interactivity and messaging were consistent visuel platform, feature distinction, object continuity, user directed path, filtering/selection/search and captions/headlines.</p>
-
-                  <blockquote>Check out Figure 8 and section 4.3.
-                  What is your favorite genre of narrative visualization? Why?
-                  What is your least favorite genre? Why?</blockquote>
-                    <p>Our favorite narrative visualization is film/animation. Yes, it trades off a high degree of interactivity, but it does so for a, usually, very easy to follow toolkit. Anyone can understand a film. It doesn't need words or numbers. It harkens back to the purest form of storytelling, pictures. Using the toolkit that comes with filmic storytelling, even a child can be made to understand relatively complex subject matter. Also, given enough visual flair it can be highly enticing to a potential viewer. Just look at the effect a well made trailer can have on people.
-
-                    Partitioned poster is our least favorite narrative visualization as it has no interactivity, it does not move and it carries with it a high amount of visual clutter. It can very easily be quite messy.</p>
-
-                </div>
-            </div>
-            <hr />
+            
             
             <div id="part2" class="content">
                 <!-- PART 4 -->
@@ -153,27 +123,27 @@
 
 
 
-<div class="align-center" id="part2_linechart"></div>
+<div class="align-center" id="d3_linechart"></div>
 
 
 <div class="align-center">
   <h3>Map of murders at location</h3>
-  <p id="part2_map_button" class="button alt" onclick="hideShow('part2_map')">Show/hide Map</p>
+  <p id="part2_map_button" class="button alt" onclick="hideShow('d3_map')">Show/hide Map</p>
   <p id="part2_map_text">Hold over dots to see tooltips with date. Move or clear the brush to change data showned in map.</p>
 </div>
 
-<div class="align-center" id="part2_map">
+<div class="align-center" id="d3_map">
 </div>
 
 <div class="align-center">
   <h3>Bar Chart of Murders per hour</h3>
-  <p id="part2_bar_button" class="button alt" onclick="hideShow('part2_bar')">Show/hide Bar Chart</p>
+  <p id="part2_bar_button" class="button alt" onclick="hideShow('d3_bar')">Show/hide Bar Chart</p>
   <p id="part2_bar_text">
   Move or clear the brush to change data showned in bar chart.<br/>
   Try to Hide the Map and use the brush and animation to see the bar chart change.</p>
 </div>
 
-<div class="align-center" id="part2_bar"></div>
+<div class="align-center" id="d3_bar"></div>
 
 <div>
   Data from: <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i</a>
