--- a/index.html
+++ b/index.html
@@ -65,20 +65,21 @@ function includeHTML() {
 
 
 <div id="content" class="container">
-  <h1 class="header">An insight into accidents in New York</h1>
+  <div class="row">
+    <h1 class="col-9 header">An insight into accidents in New York</h1>
+    <div class="col-3">
+        <div class="justify-content-center text-center explainer-content">
+          <button class="btn btn-link" type="button" onclick="showHide('main-d3-content', 'block'); showHide('explainer-content', 'none');" >Show Main Project Page</button>
+        </div>
+        <div class="justify-content-center text-center main-d3-content">
+          <button class="btn btn-link"   type="button" onclick="showHide('main-d3-content', 'none'); showHide('explainer-content', 'block');">Show Explainer book</button>
+        </div>
+    </div>
+  </div>
 
   <hr class="line thick" />
 
   <h4 class="subtitle">Project B - 02806 Social Data Analysis and Visualizations F18 at DTU</h4>
-
-  <div class="justify-content-center text-center explainer-content">
-    <button class="btn btn-link" type="button" onclick="showHide('main-d3-content', 'block'); showHide('explainer-content', 'none');" >Show Main Project Page</button>
-  </div>
-  <div class="justify-content-center text-center main-d3-content">
-    <button class="btn btn-link"   type="button" onclick="showHide('main-d3-content', 'none'); showHide('explainer-content', 'block');">Show Explainer book</button>
-  </div>
-
-  <br/>
 
   <div class="explainer-content">
     <div w3-include-html="explainer.html"></div> 
