--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@ function includeHTML() {
           <div>
             Her kan være billeder af cykel, bil, fodgænger, som så kan aktivere forskellige dots, alt efter om det har været involveret?
           </div>
+          <div class="TEST" id ="carbutton">
+            <button type="button" class="btn-primary btn col-md-auto mt-3" id="reset_time_svg_slider" style="height: 40px;" onclick="toggleBrooklyn();">Brooklyn</button>
+          <!--  <img src="suv.png" alt="Din Mor" id ="carbutton" style="width:50px;height:50px;"></button>-->
+          <button type="button" class="btn-primary btn col-md-auto mt-3" id="reset_time_svg_slider" style="height: 40px;" onclick="toggleQueens();">Queens</button>
+          <button type="button" class="btn-primary btn col-md-auto mt-3" id="reset_time_svg_slider" style="height: 40px;" onclick="toggleBronx();">Bronx</button>
+          <button type="button" class="btn-primary btn col-md-auto mt-3" id="reset_time_svg_slider" style="height: 40px;" onclick="toggleStatenIsland();">Staten Island</button>
+          <button type="button" class="btn-primary btn col-md-auto mt-3" id="reset_time_svg_slider" style="height: 40px;" onclick="toggleManhattan();">Manhattan</button>
+          </div>
         </div>      
 
       </div>
