--- a/explainer.html
+++ b/explainer.html
@@ -5,13 +5,20 @@
 <h2>Motivation</h2>
 <ul>
   <li>
-What is your dataset?
+What is your dataset? 
+<br/><em>Notes</em>
+<br/>
+Our data is obtained from the data set at 
   </li>
   <li>
 Why did you choose this/these particular dataset(s)?
+<br/><em>Notes</em>
+<br/>Answer
   </li>
   <li>
 What was your goal for the end user’s experience?
+<br/><em>Notes</em>
+<br/>Answer
   </li>
 </ul>
 
@@ -20,9 +27,13 @@ What was your goal for the end user’s experience?
 <ul>
   <li>
 Write about your choices in data cleaning and preprocessing
+<br/><em>Notes</em>
+<br/>Answer
   </li>
   <li>
 Write a short section that discusses the dataset stats, containing key points/plots from your exploratory data analysis.
+<br/><em>Notes</em>
+<br/>Answer
   </li>  
 </ul>
 
@@ -31,9 +42,13 @@ Write a short section that discusses the dataset stats, containing key points/pl
 <ul>
   <li>
 Which tools did you use from each of the 3 categories of Visual Narrative (Figure 7 in Segal and Heer). Why?
+<br/><em>Notes</em>
+<br/>Answer
   </li>
   <li>
 Which tools did you use from each of the 3 categories of Narrative Structure (Figure 7 in Segal and Heer). Why?
+<br/><em>Notes</em>
+<br/>Answer
   </li>  
     
 </ul>
@@ -43,6 +58,12 @@ Which tools did you use from each of the 3 categories of Narrative Structure (Fi
 <ul>
   <li>
 Why are they right for the story you want to tell?
+<br/><em>Notes</em>
+<br/>Answer
+
+<b>Slider</b>
+http://datacandy.co.uk/scroller/index.html
+http://1wheel.github.io/graph-scroll/
   </li>
 </ul>
 
@@ -50,10 +71,14 @@ Why are they right for the story you want to tell?
 <h2>Discussion</h2>
 <ul>
   <li>
-    What went well?
+What went well?
+<br/><em>Notes</em>
+<br/>Answer
   </li>
   <li>
     What is still missing? What could be improved?, Why?
+<br/><em>Notes</em>
+<br/>Answer    
   </li>
 </ul>,
 
