--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ function includeHTML() {
       <div class="step storybox">
         <h1>Section 2</h1>
         <p>
-          The northwestern part of Staten Island, however, is not completely free of accidents. However, due to our filtering of only using data which has a designated borough, this part is removed. This seems to indicate a systematic error in inputting data.
+          The northwestern part of Staten Island is not completely free of accidents. However, due to our filtering of only using data which has a designated borough, this part is removed. This seems to indicate a systematic error in inputting data.
         </p>
       </div>
       <div class="step storybox">
@@ -232,7 +232,7 @@ function includeHTML() {
       <div class="step storybox">
         <h1>Section 4</h1>
         <p>
-
+          We looked for a correlation between population density and the amount of accidents per inhabitant. Following this hypothesis we thought Manhattan would be the most dangerous. But we were unable to find any correlation. On the contrary, Queens with the second lowest density was the most dangerous and the Bronx, with the second highest density, was the most dangerous.
         </p>
       </div>
     </div>    <!-- end of steps -->
