--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ function includeHTML() {
         The data set from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">OpenNYC</a> has been used. It has been filtered to only include the years 2017 and 2018 and only include data that has a designated borough. The borough-less data accounts for roughly 33% of the original dataset.
       </p>
       <div class="justify-content-center text-center">
-        <svg id="d3_factors" width="600" height="600" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
+        <!-- <svg id="d3_factors" width="600" height="600" font-family="sans-serif" font-size="10" text-anchor="middle"></svg> -->
+        <svg id="d3_factors" style="display:none"width="600" height="600" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
       </div>
       <p>
       </p>
@@ -196,8 +197,9 @@ function includeHTML() {
       </div>
     </div>    <!-- end of fixedarea -->  
     <div id="steps" class="text-center">
-      <div class="step ">
+      <div class="step">
       </div>
+
 
       <div class="step ">
         <h1>Section 1</h1>
@@ -217,7 +219,7 @@ function includeHTML() {
           Across the dataset we see peak accident hours are 14:00-15:00 and 16:00-18:00. This must mean that rush hour, when people are travelling home from work, is the most dangerous.
         </p>
       </div>
-      <div class="step ">
+      <div class="step">
         <h1>Section 4</h1>
         <p>
           We looked for a correlation between population density and the amount of accidents per inhabitant. Following this hypothesis we thought Manhattan would be the most dangerous. But we were unable to find any correlation. On the contrary, Queens with the second lowest density was the most dangerous and the Bronx, with the second highest density, was the least dangerous.
