Fjernede så mange kolonner som muligt fra data sæt

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ function includeHTML() {
         <svg id="d3_factors" style="display:none" width="600" height="600" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
       </div>
       <p>
+        This shows us that the top 5 contributing factors, making up 69.1% of the accidents with a recorded contributing factor, are factors which could be easily remedied by being more attentive drivers. Driver inattention - don’t do other things while driving. Following too closely - use the two second rule. Failure to Yield Right-of-Way - relearn the rules of traffic. Passing or Lane Usage Improper - remember to only pass on the left. Backing unsafely - remember to look around and back out slowly. This sort of knowledge could be very useful when targeting methods for a safer traffic, as seen in New York’s current traffic initiative ‘Vision Zero’.
       </p>
       <p>
       </p>
