--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ function includeHTML() {
         But where is the least safe? And since it is so congested where are you most likely to have your new car dented?
       </p>
       <p>
-        The data set from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">OpenNYC</a> has been used. It has been filtered to only include the years 2017 and 2018 and only include data that has a designated borough. The borough-less data accounts for roughly 33% of the original dataset.
+        The data set from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">OpenNYC</a> has been used. It has been filtered to only include the years 2017 and 2018 and only include data that has a designated borough. The borough-less data accounts for roughly 33% of the original dataset. To make the visualizations run alot smoother we have elected to only use every 40th data point.
       </p>
       <div class="justify-content-center text-center">
         <!-- <svg id="d3_factors" width="600" height="600" font-family="sans-serif" font-size="10" text-anchor="middle"></svg> -->
