--- a/explainer.html
+++ b/explainer.html
@@ -86,9 +86,36 @@ What went well?
 <br/><em>Notes</em>
 <br/>Due to our focus on presenting and improving our initial page there wasn’t time to implement some more interesting statistics. We would have liked to include another on-the-fly calculated bar chart showcasing ‘Contributing Factor’ statistics, which should be based on the chosen time and included boroughs. Additionally, we would have liked to incorporate a heat map on the choropleth instead of dots, based on amount of accidents relative to the population density as a place like Manhattan has an inordinate amount of collisions, yet it’s unclear what the scope of these accidents are as Manhattan has much larger population density than Staten Island, but another contributing factors is that a lot of people work in Manhattan, but don’t live there. This should correlate with our calculated peak of 5 pm, which amounts to the time where the most amount of people are traveling home from work.
 
+<p>  
 Ideally we would have also liked to have not just tooltips, but the possibility of clicking a datapoint and then seeing all relevant information. Another feature which would have improved the visualization would be for the corresponding borough in the choropleth to disappear when the dataset was removed from usage.
+</p>
 
+<p>
 One thing especially could have used more time. We spent a great deal of time trying to implement using canvas instead of drawing svg elements the standard D3 way, as we have quite a large dataset. However, we had to stop once we realized how much effort it would take to get it to work with our three different brushes and visualizations. Even getting it to work with just one was seemed to be a lot of effort. Therefore we instead chose to use a smaller portion of our dataset and focus on enhancing our storytelling and narrative. To actually see the transitions happen we chose to only use every 30th data point of our already heavily filtered dataset. If we had successfully implemented the canvas method we had hoped to get up to at least every 20th data point or more.
+</p>
+
+<p>
+In a real life commercial article with visualizations we would use canvas for painting. Making a circle element for each point means that the DOM tree expands quickly. Each of these point automatically create a databinding to our svg when using D3. We optimized the rendering by using css classes and minimizing the update calls, but there is a limit and normally it becomes slow when using more than 1000 points (and we have a lot more). Since this wasn't the most important part to fulfill our narrative, we have provided the information here and some pictures of a performance recording in the browser. Images of client side javascript performance measures when doing a animation is seen below.
+</p>
+
+<figure class="figure text-align">
+  <img src="images/waterfall_map_paint.jpg" alt="waterfall_map_paint.jpg"/>
+  <figcaption class="figure-caption">The paint execution takes up a lot of time when doing the animations.</figcaption>
+</figure>
+
+
+<figure class="figure text-align">
+  <img src="images/call_tree_paint.jpg" alt="call_tree_paint.jpg"/>
+  <figcaption class="figure-caption">The map svg paint makes the time used on graphics a lot higher.</figcaption>
+</figure>
+
+<figure class="figure">
+  <img src="images/call_tree_nopaint.jpg" alt="call_tree_nopaint.jpg"/>
+  <figcaption class="figure-caption">The map svg is display none and the graphics only takes 1,3 seconds.</figcaption>
+</figure>
+
+
+
     
   </li>
 </ul>
