transition barchart update

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                       <div class="col" id="line_svg_slider"></div>
                     <!-- </div> -->
                     <div class="col std-button" style="text-align:left">
-                      <button type="button" class="btn-outline-primary btn btn-xs  std-button" id="reset_line_svg_slider"  onclick="reset_line_svg_slider();">Reset</button>
+                      <button type="button" class="btn-outline-primary btn btn-xs  std-button" id="reset_line_svg_slider"  onclick="reset_line_svg_slider();reset_brush();">Reset all</button>
                       <button type="button" class="btn-outline-primary btn btn-xs  std-button" id="animate_button"  onclick="animate_time();">Animate</button>
                     </div>
                   </div>  
