--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
           New York City has been scored to be the third most congested city in the world by <a href="http://inrix.com/scorecard/">Inrix</a>. In fact it has become so bad that a new initiative, <a href="http://www1.nyc.gov/site/visionzero/index.page">Vision Zero</a>, was launched in 2014, with a goal of reducing annual traffic deaths by 50% by the year 2025. It has succeeded in reducing the total number of people killed anually in traffic. It is still not completely safe to be in traffic in New York. 
         </p>
         <p>
-          But where is the least safe? And since it is so congested where are you most likely to have your new car dented?
+          But which areas are the most dangerous? And since it is so congested where are you most likely to have your new car dented?
         </p>
         <p>
-          The data set from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">OpenNYC</a> has been used. It has been filtered to only include the years 2017 and 2018 and only include data that has a designated borough. The borough-less data accounts for roughly 33% of the original dataset. To make the visualizations run alot smoother we have elected to only use every 30th data point.
+          The data set from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">OpenNYC</a> has been used. It has been filtered to only include the years 2017 and 2018, and only include data that has correctly been designated a borough, meaning any data with a miss match of borough ID and latitude longitude location has been removed. The miss matched data accounts for roughly 33% of the original dataset, including the removal of data without a designated borough. To make the visualizations run a lot smoother we have elected to only use every 30th data point. Even though this will make the data less precise, our objective is to give an overview of the data and focus on the narrative, and we feel this will be better shown with less cluttered data.
         </p>
         <div class="justify-content-center text-center">
           <svg id="d3_bubbles" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
         </div>
         <p>
-          This shows us that the top 5 contributing factors, making up 69.1% of the accidents with a recorded contributing factor, are factors which could be easily remedied by being more attentive drivers. Driver inattention - don’t do other things while driving. Following too closely - use the two second rule. Failure to Yield Right-of-Way - relearn the rules of traffic. Passing or Lane Usage Improper - remember to only pass on the left. Backing unsafely - remember to look around and back out slowly. This sort of knowledge could be very useful when targeting methods for a safer traffic, as seen in New York’s current traffic initiative ‘Vision Zero’.
+          The above buble chart shows the most common contributing factos for car accidents. The top 5 contributing factors are making up 69.1% of the accidents, and they are factors which could be easily be remedied by drivers being more attentive or more patient. Driver inattention - don’t do other things while driving. Following too closely - use the two second rule. Failure to Yield Right-of-Way - have patience. Passing or Lane Usage Improper - remember to only pass on the left, even if the car infront is slow. Backing unsafely - remember to look around and back out slowly. This sort of knowledge could be very useful when targeting methods for a safer traffic, as seen in New York’s current traffic initiative ‘Vision Zero’.
         </p>
         <p>
         </p>
