made local slider load and fixed the graph scroll

--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
   <head>
     <title>Project B</title>
     <meta charset="utf-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-
-    <!-- <script src="https://d3js.org/d3.v4.js"></script> -->
     <script src="js/d3.v4.min.js"></script>
     <script src="js/lodash.min.js"></script>
     <script src="js/graph-scroll.js"></script>
-
-    <script src="https://unpkg.com/d3-simple-slider@0.2.1/build/d3-simple-slider.js"></script>
+    <script src="js/d3-simple-slider.js"></script>
 
     <!--jQuery CDN-->
     <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
-
     <!--Bootstrap-->
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <link  href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
-
     <link rel="stylesheet" type="text/css" href="style/main.css">
 
     <script type="text/javascript">
@@ -204,7 +194,6 @@
       </div>    <!-- end of fixedarea -->  
       <div id="steps" class="text-center">
         <div class="step"></div>
-        
         <div class="step" >
           <h1>Section 1</h1>
           <p>
@@ -229,20 +218,25 @@
             We looked for a correlation between population density and the amount of accidents per inhabitant. Following this hypothesis we thought Manhattan would be the most dangerous. But we were unable to find any correlation. On the contrary, Queens with the second lowest density was the most dangerous and the Bronx, with the second highest density, was the least dangerous.
           </p>
         </div>
+        <div class="step"></div>
+
       </div>    <!-- end of steps -->
     </div><!-- end of fixedcontainer -->
 
 
     <div class="row" style="margin-left:20px">
       <div class="col-2"></div>
-      <div class="col-8"></div>  <!-- end of title, middle column -->
+      <div class="col-8">
+        
+        Noget tekst som afslutning
+
+      </div>  <!-- end of title, middle column -->
       <div class="col-2"></div>
     </div>
 
   </div> <!-- end of main-d3-content -->
 
   <script type="text/javascript" src="js/final_assignment.js"> </script>
-  <!-- <script type="text/javascript" src="js/bubbles.js"> </script> -->
 
   <script type="text/javascript">
     showHide('main-d3-content', 'block'); 
